se crea parrafo

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     
     <div>
         <h1>El titulo</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta perspiciatis quibusdam provident natus exercitationem tempora eaque optio consequuntur omnis. Iusto inventore, odio temporibus quo cumque corporis fugiat nesciunt recusandae sint?</p>
     </div>
 
 </body>
